--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/menu/menu-button.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/menu/menu-button.phtml
@@ -18,7 +18,7 @@ $block->setData('cache_tags', $blockCacheViewModel->collectBlockChildrenCacheTag
 <button
   @click="!isMenuVisible ? $store.popup.showPopup('menu') : $store.popup.hidePopup('menu')"
   type="button"
-  class="md:button--filled-white button icon-button icon-button--size-lg md:w-auto md:px-4 md:gap-3 md:m-2"
+  class="contrast-border md:button--filled-secondary button icon-button icon-button--size-lg md:w-auto md:gap-3 md:px-4"
 >
   <div
     class="contents"
