--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/category/grid-container.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/category/grid-container.phtml
@@ -1,3 +1,12 @@
+<?php
+
+declare(strict_types=1);
+
+use Magento\Framework\View\Element\Template;
+
+/** @var Template $block */
+?>
+
 <section
   id="ProductGridContainer"
   class="content-wrapper animate-on-transition mx-auto"
