--- a/app/design/frontend/Satoshi/Hyva/Magento_Checkout/templates/cart/shipping.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Checkout/templates/cart/shipping.phtml
@@ -13,7 +13,7 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
     x-data="Accordion(showEstimateShipping, 700)"
   >
     <button
-      class="flex w-full justify-between"
+      class="group flex w-full justify-between"
       x-ref="AccordionButton"
       :aria-expanded="isExpanded"
       aria-controls="estimation-panel"
@@ -26,7 +26,7 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
         x-text="cartTotals.is_virtual ? `<?= __('Estimate Tax') ?>` : `<?= __('Estimate Shipping and Tax') ?>`"
       >
       </h2>
-      <div class="button button--outline-secondary icon-button icon-button--size-xs">
+      <div class="button button--outline-secondary icon-button icon-button--size-xs group-hoverable">
         <span x-ref="AccordionIcon">
           <?= $hyvaicons->renderHtml('chevron-up') ?>
         </span>
@@ -35,7 +35,7 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
     <div
       x-cloak
       x-ref="AccordionPanel"
-      class="overflow-hidden text-text-100 contrast-more:text-secondary-700"
+      class="overflow-hidden px-2 -mx-2"
       :class="
         {
           'transition-none': $store.main.isReducedMotion,
@@ -46,7 +46,7 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
       role="region"
       aria-labelledby="estimation-label"
     >
-      <div class="mt-3 text-text-700 [&>p]:m-0">
+      <div class="mt-3 text-text-500">
         <p
           x-text="cartTotals.is_virtual ? `<?= __('Enter your billing address to get a tax estimate.') ?>` : `<?= __('Enter your destination to get a shipping estimate.') ?>`">
         </p>
@@ -57,15 +57,14 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
         >
           <div class="w-full">
             <label
-              for="
-            country_id"
+              for="country_id"
               class="sr-only tracking-widest"
             ><?= __('Country') ?></label>
             <select
               name="country_id"
               placeholder="<?= __('Country') ?>"
               id="country_id"
-              class="w-full rounded-sm border border-text-50 bg-white px-5 py-4 contrast-more:border-secondary-700 contrast-more:placeholder-secondary-700"
+              class="input__field"
               @change.debounce="setCountry($event.target.value)"
             >
               <option value=""><?= __('Country') ?></option>
@@ -92,7 +91,7 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
                 name="region_id"
                 placeholder="<?= __('State/Province') ?>"
                 id="region_id"
-                class="w-full rounded-sm border border-text-50 bg-white px-5 py-4 contrast-more:border-secondary-700 contrast-more:placeholder-secondary-700"
+                class="input__field"
                 @change.debounce="setRegion($event.target.value, 'select')"
               >
                 <option value=""><?= __('State/Province') ?></option>
@@ -127,7 +126,7 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
                 name="region"
                 placeholder="<?= __('State/Province') ?>"
                 id="region"
-                class="w-full rounded-sm border border-text-50 px-5 py-4 contrast-more:border-secondary-700 contrast-more:placeholder-secondary-700"
+                class="input__field"
                 @change.debounce="setRegion($event.target.value)"
                 :value="cartData.address && cartData.address.region"
               >
@@ -144,7 +143,7 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
               name="postcode"
               placeholder="<?= __('Zip/Postal Code') ?>"
               id="postcode"
-              class="w-full rounded-sm border border-text-50 px-5 py-4 contrast-more:border-secondary-700 contrast-more:placeholder-secondary-700"
+              class="input__field"
               @input.debounce.1000ms="setPostcode($event.target.value)"
               :value="cartData.address && cartData.address.postcode"
             >
