--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/breadcrumbs.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/breadcrumbs.phtml
@@ -24,54 +24,61 @@ $hideOnMobile = in_array($pageType, $mobilePageTypes);
         aria-label="<?= __('Breadcrumbs') ?>"
     >
         <div role="list" class="truncate px-2">
-            <?php foreach ($crumbs as $crumbName => $crumbInfo): ?>
-                <div role="listitem" class="breadcrumb" data-crumb-name="<?= $escaper->escapeHtmlAttr($crumbName) ?>">
-                    <?php if ($isAlpineTemplate): ?>
-                        <template x-if="$store['transition'].pageType === 'category'">
-                            <div class="contents">
-                                <div role="listitem" x-text="$store['transition'].pageData?.title"></div>
-                            </div>
-                        </template>
-
-                        <template x-if="$store['transition'].pageType === 'product'">
-                            <div class="contents">
-                                <div role="listitem" class="breadcrumb" x-text="$store['transition'].pageData?.title"></div>
-                            </div>
-                        </template>
-
-                        <template x-if="$store['transition'].pageType === 'search'">
-                            <div class="contents">
-                                <div
-                                    x-data="{
-                                        searchTerm: $store['transition'].pageData?.search,
-                                        resultCount: $store['transition'].pageData?.resultCount,
-                                        text: '<?= __('%1 result found for "%2"') ?>',
-                                    }"
-                                    role="listitem"
-                                    class="breadcrumb"
-                                    x-text="hyva.strf(text, resultCount, searchTerm)"
-                                ></div>
-                            </div>
-                        </template>
-
-                    <?php else: ?>
-                        <?php if (!empty($crumbInfo['link'])): ?>
-                            <div role="listitem" class="inline font-bold text-neutral-500 contrast-more:text-secondary-700">
-                                <a x-element-transition-trigger href="<?= $escaper->escapeUrl($crumbInfo['link']) ?>">
-                                    <?= $escaper->escapeHtml($crumbInfo['label']) ?>
-                                </a>
-                            </div>
-                            <div role="listitem" class="mx-4 inline-block text-neutral-500 contrast-more:text-secondary-700" aria-hidden="true">
-                                <?= $hyvaicons->renderHtml('breadcrumb-chevron'); ?>
-                            </div>
-                        <?php elseif (!empty($crumbInfo['last'])): ?>
-                            <div role="listitem" class="breadcrumb">
-                                <?= $escaper->escapeHtml($crumbInfo['label']) ?>
-                            </div>
-                        <?php endif; ?>
-                    <?php endif; ?>
+            <?php if ($isAlpineTemplate): ?>
+                <div role="listitem" class="inline font-bold">
+                    <a class="inline-flex hover:underline" x-element-transition-trigger href="<?= $escaper->escapeUrl($block->getUrl('/')) ?>">
+                        <?= __('Home') ?>
+                    </a>
                 </div>
-            <?php endforeach; ?>
+
+                <div role="listitem" class="mx-4 inline-block" aria-hidden="true">
+                    <?= $hyvaicons->renderHtml('breadcrumb-chevron'); ?>
+                </div>
+
+                <template x-if="$store['transition'].pageType === 'category'">
+                    <div class="contents">
+                        <div role="listitem" class="breadcrumb text-text-500" x-text="$store['transition'].pageData?.title"></div>
+                    </div>
+                </template>
+
+                <template x-if="$store['transition'].pageType === 'product'">
+                    <div class="contents">
+                        <div role="listitem" class="breadcrumb text-text-500" x-text="$store['transition'].pageData?.title"></div>
+                    </div>
+                </template>
+
+                <template x-if="$store['transition'].pageType === 'search'">
+                    <div class="contents">
+                        <div
+                            x-data="{
+                                searchTerm: $store['transition'].pageData?.search,
+                                resultCount: $store['transition'].pageData?.resultCount,
+                                text: '<?= __('%1 result found for "%2"') ?>',
+                            }"
+                            role="listitem"
+                            class="breadcrumb text-text-500"
+                            x-text="hyva.strf(text, resultCount, searchTerm)"
+                        ></div>
+                    </div>
+                </template>
+            <?php else: ?>
+                <?php foreach ($crumbs as $crumbName => $crumbInfo): ?>
+                    <?php if (!empty($crumbInfo['link'])): ?>
+                        <div role="listitem" class="breadcrumb" data-crumb-name="<?= $escaper->escapeHtmlAttr($crumbName) ?>">
+                            <a x-element-transition-trigger class="inline-flex hover:underline" href="<?= $escaper->escapeUrl($crumbInfo['link']) ?>" aria-current="page">
+                                <?= $escaper->escapeHtml($crumbInfo['label']) ?>
+                            </a>
+                        </div>
+                        <div role="listitem" class="mx-4 inline-block" aria-hidden="true">
+                            <?= $hyvaicons->renderHtml('breadcrumb-chevron'); ?>
+                        </div>
+                    <?php elseif (!empty($crumbInfo['last'])): ?>
+                        <div role="listitem" class="breadcrumb text-text-500">
+                            <?= $escaper->escapeHtml($crumbInfo['label']) ?>
+                        </div>
+                    <?php endif; ?>
+                <?php endforeach; ?>
+            <?php endif; ?>
         </div>
     </nav>
 <?php endif; ?>
