--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header.phtml
@@ -39,7 +39,7 @@ $cartItemsCount = $cart->getCartItemsQty();
 >
   <div
     id="header-shadow"
-    class="pointer-events-none absolute -top-1 left-0 right-0 -z-10 h-[calc(100%+20px)] -translate-y-full bg-gradient-to-b from-shadow to-transparent transition-transform duration-300 ease-linear will-change-transform md:hidden"
+    class="pointer-events-none absolute -top-1 left-0 right-0 -z-10 h-[calc(100%+20px)] -translate-y-full bg-gradient-to-b from-shadow to-transparent transition-all duration-300 ease-linear will-change-transform md:hidden"
     :class="
       {
         'translate-y-0': $store.main.isHeaderShadowVisible,
@@ -49,11 +49,11 @@ $cartItemsCount = $cart->getCartItemsQty();
   ></div>
 
   <div
-    class="content-wrapper col-start-1 m-auto grid w-full grid-cols-header items-center rounded-md bg-fg py-3 md:flex md:bg-transparent md:px-3 contrast-more:max-md:border contrast-more:max-md:border-secondary-700"
+    class="content-wrapper col-start-1 m-auto grid w-full grid-cols-header items-center rounded-md bg-bg-500 py-3 md:flex md:bg-transparent md:px-3"
     x-data="{n:0}"
   >
     <div
-      class="md:flex"
+      class="transition-all md:flex"
       :class="{'md:drop-shadow-lg': $store.main.isHeaderShadowVisible}"
     >
       <?=
@@ -81,7 +81,7 @@ $cartItemsCount = $cart->getCartItemsQty();
     </div>
     <div class="contents md:flex md:flex-grow md:justify-end">
       <div
-        class="col-start-5 md:flex md:items-center"
+        class="col-start-5 transition-all md:flex md:items-center"
         :class="{ 'md:drop-shadow-lg': $store.main.isHeaderShadowVisible }"
       >
         <?=
@@ -114,14 +114,14 @@ $cartItemsCount = $cart->getCartItemsQty();
   <div id="end-of-header"></div>
 </header>
 
-<div
-  class="pointer-events-none sticky top-[88px] z-30 h-[1px] mix-blend-difference contrast-more:mix-blend-normal max-md:hidden"
->
-  <div class="absolute inset-x-0 -top-16 col-start-3 flex items-center justify-center text-white">
+<div class="pointer-events-none sticky top-[88px] z-30 h-[1px] max-md:hidden">
+  <div
+    class="absolute inset-x-0 -top-[72px] col-start-3 flex min-h-[56px] items-center justify-center text-primary-500">
     <a
       href="<?= $escaper->escapeUrl($block->getUrl('')) ?>"
       x-element-transition-trigger
-      class="pointer-events-auto rounded-sm px-3 py-2 text-xl font-bold contrast-more:flex contrast-more:h-14 contrast-more:items-center contrast-more:border contrast-more:border-secondary-700 contrast-more:bg-fg contrast-more:px-3 contrast-more:text-black"
+      class="pointer-events-auto rounded-sm px-3 py-2 text-xl font-bold text-primary-500 transition-all"
+      :class="{'md:drop-shadow-lg': $store.main.isHeaderShadowVisible}"
       tabindex="3"
       x-a11y-trap-element="$store.transition.isPreviewActive && !$store.resizable.isVisible()"
       aria-label="<?= __('Go to Home page') ?>"
