--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/cart/minicart-quantity-controls.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/cart/minicart-quantity-controls.phtml
@@ -14,14 +14,13 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
 
 <button
   type="button"
-  class="button button--outline-secondary icon-button icon-button--size-sm bg-white text-secondary-600 transition-opacity duration-300 active:bg-secondary-100"
-  :aria-label="item.qty < 2 ? `{$escaper->escapeHtml(__('Remove from cart'))}` : `{$escaper->escapeHtml(__('Decrease quantity'))}`"
+  class="button button--outline-secondary icon-button icon-button--size-sm bg-bg-500"
+  :aria-label="item.qty < 2 ? `<?= $escaper->escapeHtml(__('Remove from cart')) ?>` : `<?= $escaper->escapeHtml(__('Decrease quantity')) ?>`"
   @click.prevent.stop="$store.cart.decreaseQty(item.item_id);"
   @transitionend.stop
   :aria-busy="$store.cart.isLoading"
 >
   <span
-    class="[&_svg]:contrast-more:text-secondary-700"
     :class="{ 'hidden': item.qty > 1 }"
     x-show="item.qty < 2"
   >
@@ -54,8 +53,8 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
 >
 <button
   type="button"
-  class="button button--outline-secondary icon-button icon-button--size-sm bg-white text-secondary-600 transition-opacity duration-300 active:bg-secondary-100"
-  aria-label="{$escaper->escapeHtml(__('Increase'))}"
+  class="button button--outline-secondary icon-button icon-button--size-sm bg-bg-500"
+  aria-label="<?= $escaper->escapeHtml(__('Increase')) ?>"
   @click.prevent.stop="$store.cart.increaseQty(item.item_id)"
   :aria-busy="$store.cart.isLoading"
 >
