--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/cart/minicart-totals.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/cart/minicart-totals.phtml
@@ -21,9 +21,8 @@ $isCartPage = $block->getData('isCartPage');
     get cartTotals() { return $store.cart.cartTotals }
   }"
 >
-
   <div
-    class="absolute left-0 right-0 top-0 origin-bottom -translate-y-[2.5rem] text-text-on-fg transition-transform duration-700 motion-reduce:transition-none md:mb-0 md:w-full <?= $isCartPage ? 'md:relative md:translate-y-0 md:pointer-events-auto' : '' ?>"
+    class="absolute left-0 right-0 top-0 origin-bottom -translate-y-[2.5rem] transition-transform duration-700 motion-reduce:transition-none md:mb-0 md:w-full <?= $isCartPage ? 'md:relative md:translate-y-0 md:pointer-events-auto' : '' ?>"
     :class="
       {
         '-translate-y-full': isTotalsExpanded,
@@ -35,16 +34,15 @@ $isCartPage = $block->getData('isCartPage');
       class="pointer-events-none <?= $isCartPage ? 'md:hidden' : '' ?> relative top-0 h-10 bg-gradient-to-t from-[#00000010] via-transparent to-transparent"
     ></div>
     <div
-      class="flex flex-col gap-4 bg-white <?= $isCartPage ? 'max-md:px-4 md:pb-4' : 'px-4 pointer-events-none' ?> pt-4 [.popup\_\_wrapper--visible_&]:pointer-events-auto [.resizable--visible_&]:pointer-events-auto"
+      class="flex flex-col gap-4 bg-bg-500 <?= $isCartPage ? 'max-md:px-4 md:pb-4 md:border-t md:border-b md:-mx-4 md:px-4' : 'px-4 pointer-events-none' ?> pt-4 [.popup\_\_wrapper--visible_&]:pointer-events-auto [.resizable--visible_&]:pointer-events-auto"
       :inert="<?= $isCartPage ? '$store.main.isMobile && ' : '' ?>!isTotalsExpanded"
     >
-
       <?php if ($isCartPage): ?>
       <?= $template->render('Magento_Checkout::cart/shipping.phtml') ?>
       <?php endif; ?>
 
       <div class="flex items-center justify-between pt-2">
-        <h2><?= __('Order summary') ?></h2>
+        <h2 class="text-text-500"><?= __('Order summary') ?></h2>
         <button
           type="button"
           class="button button--outline-secondary icon-button icon-button--size-xs <?= $isCartPage ? 'md:hidden' : '' ?>"
@@ -58,7 +56,7 @@ $isCartPage = $block->getData('isCartPage');
         </button>
       </div>
 
-      <div class="flex flex-col gap-3 text-text-100 contrast-more:text-secondary-700">
+      <div class="flex flex-col gap-3">
         <template
           x-for="segment in cartTotals.total_segments"
           :key="segment.code"
@@ -89,12 +87,12 @@ $isCartPage = $block->getData('isCartPage');
           </div>
         </template>
       </div>
-      <hr class="divider -mx-4 contrast-more:bg-secondary-700">
+      <hr class="divider -mx-4">
     </div>
   </div>
 
   <div
-    class="<?= !$isCartPage ? 'pointer-events-none' : '' ?> relative -mx-4 rounded-b-md bg-white px-4 text-text-on-fg transition-opacity duration-300 md:pb-4 max-md:px-3 max-md:pb-5 [.popup\_\_main_&]:pb-3 [.popup\_\_wrapper--visible_&]:pointer-events-auto [.resizable--visible_&]:pointer-events-auto "
+    class="<?= !$isCartPage ? 'pointer-events-none px-3' : 'p-4' ?>  relative -mx-4 rounded-b-md bg-bg-500 transition-opacity duration-300 md:pb-4 max-md:px-3 max-md:pb-5 [.popup\_\_main_&]:pb-3 [.popup\_\_wrapper--visible_&]:pointer-events-auto [.resizable--visible_&]:pointer-events-auto"
     :class="
         {
           'opacity-0': isCartEmpty,
@@ -103,7 +101,9 @@ $isCartPage = $block->getData('isCartPage');
         }
       "
   >
-    <div class="flex items-center justify-between overflow-x-hidden bg-fg pt-4 max-md:px-3">
+    <div
+      class="flex items-center justify-between overflow-x-hidden bg-bg-500 pb-2 <?= !$isCartPage ? 'px-2 pt-4' : '' ?> text-text-500 max-md:px-3"
+    >
       <h2><?= __('Grand total') ?></h2>
       <div
         class="flex translate-x-0 items-center gap-5 transition-transform delay-200 duration-300 motion-reduce:transition-none"
@@ -135,31 +135,18 @@ $isCartPage = $block->getData('isCartPage');
       </div>
     </div>
 
-    <div class="mt-4 flex flex-col gap-4 rounded-b-xl bg-fg max-md:px-3">
-      <div class="flex gap-4">
-        <a
-          href="<?= $escaper->escapeUrl($block->getUrl('checkout')) ?>"
-          x-element-transition-trigger
-          class="button button--filled-primary h-11 w-full"
-          :class="{ 'button--disabled': $store.cart.isLoading }"
-        >
-          <?= __('Secure checkout') ?>
-          <span class="button__icon ml-3">
-            <?= $hyvaicons->renderHtml('lock') ?>
-          </span>
-        </a>
-
-        <a
-          href="<?= $escaper->escapeUrl($block->getUrl('checkout/cart')) ?>"
-          x-element-transition-trigger
-          class="button button--outline-primary h-11 <?= $isCartPage ? 'md:hidden' : '' ?>"
-        >
-          <?= __('View cart') ?>
-          <span class="button__icon ml-3">
-            <?= $hyvaicons->renderHtml('cart-empty') ?>
-          </span>
-        </a>
-      </div>
+    <div class="mt-2 flex flex-col gap-4 rounded-b-xl bg-bg-500 max-md:px-3">
+      <a
+        href="<?= $escaper->escapeUrl($block->getUrl('checkout')) ?>"
+        x-element-transition-trigger
+        class="button button--filled-primary h-11 w-full"
+        :class="{ 'button--disabled': $store.cart.isLoading }"
+      >
+        <?= __('Secure checkout') ?>
+        <span class="button__icon ml-3">
+          <?= $hyvaicons->renderHtml('lock') ?>
+        </span>
+      </a>
     </div>
   </div>
 </div>
