--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/search/search-categories.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/search/search-categories.phtml
@@ -9,7 +9,7 @@
   <div class="flex min-h-11 flex-col gap-2 md:min-h-[48px]">
     <div
       x-show="categories.length"
-      class="-mx-5 flex gap-3 overflow-x-auto px-5 py-1 md:max-w-[--search-width]"
+      class="-mx-5 flex gap-3 overflow-x-auto px-5 py-1 md:max-w-[--search-width] max-md:pb-3"
     >
       <template x-for="category in categories">
         <a
