--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/search/search-suggestions.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/search/search-suggestions.phtml
@@ -7,7 +7,7 @@
     <h2 class="text-lg"><?= __('Suggestions') ?></h2>
   </div>
   <div class="flex min-h-11 flex-col gap-2 md:min-h-[48px]">
-    <div class="-mx-5 flex gap-3 overflow-x-auto px-5 py-1 md:max-w-[--search-width]">
+    <div class="-mx-5 flex gap-3 overflow-x-auto px-5 py-1 md:max-w-[--search-width] max-md:pb-3">
       <template x-for="suggestion in suggestions">
         <a
           :href="'/catalogsearch/result/?q=' + suggestion.search"
