--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/search/search.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/search/search.phtml
@@ -14,11 +14,11 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
 
 <div>
   <form
-    class="fixed left-0 z-20 w-full bg-fg px-5 md:sticky md:w-[--search-width] md:rounded-t-md md:border-b-1 md:border-transparent md:bg-transparent md:px-2 md:pt-0 md:transition-all md:delay-150 md:duration-300 max-md:top-0 max-md:pb-3 max-md:pt-[18px]"
+    class="fixed left-0 z-20 w-full bg-bg-500 px-5 md:sticky md:w-[--search-width] md:rounded-t-md md:border-b-1 md:border-transparent md:bg-transparent md:px-2 md:pt-0 md:transition-all md:delay-150 md:duration-300 max-md:top-0 max-md:pb-3 max-md:pt-[18px]"
     role="search"
     :class="
       {
-        'md:bg-fg md:border-primary-50': getIsSearchActive(),
+        'md:bg-bg-500 md:border-bg-600': getIsSearchActive(),
         'md:bg-transparent md:border-transparent': !getIsSearchActive(),
         'md:max-w-24': !$store.resizable.isVisible('search-desktop')
       }
@@ -38,7 +38,7 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
       <input
         type="search"
         placeholder="<?= __('Search') ?>"
-        class="input__field input__field--filled focus-visible:input__field--outline md:input__field--ghost md:focus-visible:input__field--ghost border-transparent pr-11 placeholder:text-gray-500 contrast-more:border contrast-more:border-secondary-700 md:order-2 md:px-2 md:focus-visible:border-transparent md:focus-visible:shadow-none md:focus-visible:outline-0"
+        class="input__field input__field--filled focus-visible:input__field--outline md:input__field--ghost md:focus-visible:input__field--ghost border-transparent pr-11 placeholder:text-text-500 md:order-2 md:px-2 md:placeholder:text-primary-500 md:focus-visible:border-transparent md:focus-visible:shadow-none md:focus-visible:outline-0"
         x-model="searchTermInput"
         @input.debounce.300ms="setSearchTerm"
         name="q"
@@ -47,14 +47,14 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
         :tabindex="$store.main.isMobile && $store.popup.currentPopup === 'menu' ? 0 : -1"
       >
       <div
-        class="max-md:icon-button--size-md md:button md:icon-button md:icon-button--size-lg contrast-more:text-secondary-700 md:order-1 max-md:pointer-events-none max-md:absolute max-md:right-0 max-md:top-0 max-md:z-10 max-md:flex max-md:items-center max-md:justify-center max-md:px-0 max-md:text-lg max-md:text-secondary-500"
+        class="max-md:icon-button--size-md md:button md:icon-button md:icon-button--size-lg  md:order-1 md:text-primary-500 max-md:pointer-events-none max-md:absolute max-md:right-0 max-md:top-0 max-md:z-10 max-md:flex max-md:items-center max-md:justify-center max-md:px-0 max-md:text-lg max-md:text-text-500"
         x-show="!$store.main.isMobile || !searchTerm"
       >
         <?= $hyvaicons->renderHtml('search'); ?>
       </div>
       <button
         type="button"
-        class="icon-button--size-md absolute bottom-0 right-0 top-0 z-10 m-auto flex items-center justify-center px-0 text-xxl text-secondary-500 contrast-more:text-secondary-700"
+        class="icon-button--size-md absolute bottom-0 right-0 top-0 z-10 m-auto flex items-center justify-center px-0 text-xxl text-text-500"
         aria-label="<?= __('Clear search') ?>"
         x-show="!!searchTerm"
         @click="resetSearchTerm"
@@ -79,7 +79,7 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
     <?= $template->render('Magento_Theme::html/header/search/search-categories.phtml') ?>
     <?= $template->render('Magento_Theme::html/header/search/search-products.phtml') ?>
     <div
-      class="transition-opacity duration-300 md:sticky md:bottom-0 md:z-10 md:w-full md:rounded-b-md md:bg-fg md:px-5 md:pb-5"
+      class="transition-opacity duration-300 md:sticky md:bottom-0 md:z-10 md:w-full md:rounded-b-md md:bg-bg-500 md:px-5 md:pb-5"
       id="search-actions"
       x-show="!isLoading"
       x-transition.opacity
