--- a/app/design/frontend/Satoshi/Hyva/web/satoshi/theme/components/_divider.scss
+++ b/app/design/frontend/Satoshi/Hyva/web/satoshi/theme/components/_divider.scss
@@ -1,5 +1,5 @@
 .divider {
-  @apply h-[1px] min-w-full border-0 bg-gray-300 opacity-60;
+  @apply bg-bg-600 h-[1px] min-w-full border-0;
 
   &--vertical {
     @apply h-full min-h-full w-[1px] min-w-[1px];
