--- a/app/design/frontend/Satoshi/Hyva/web/satoshi/theme/components/_input.scss
+++ b/app/design/frontend/Satoshi/Hyva/web/satoshi/theme/components/_input.scss
@@ -30,18 +30,24 @@ input[type="search"] {
   }
 
   &__field {
-    @apply focus-visible:focus-ring relative h-11 w-full min-w-0 appearance-none rounded-sm border-1 border-solid px-4 text-[16px] contrast-more:border-secondary-700 contrast-more:placeholder-secondary-700;
+    @apply md:focus-visible:focus-ring relative h-11 w-full min-w-0 appearance-none rounded-[--inputs-radius] border-solid border-text-700 border-opacity-[--inputs-border-opacity] bg-bg-500 px-4 text-[16px] text-text-700 transition-[background,color,border-color] duration-200 placeholder:text-text-700 md:hover:border-primary-500 md:hover:bg-bg-400   md:hover:text-primary-500 md:focus-visible:bg-bg-100;
+
+    border-width: var(--inputs-border-width);
+    box-shadow: var(--inputs-shadow-horizontal-offset)
+      var(--inputs-shadow-vertical-offset) var(--inputs-shadow-vertical-offset)
+      var(--inputs-shadow-blur-radius)
+      rgba(0, 0, 0, var(--inputs-shadow-opacity));
 
     &:focus-visible {
-      @apply border-secondary-500 shadow-input;
+      @apply border-primary-500 shadow-input;
     }
 
     &--outline {
-      @apply border-secondary-100 bg-transparent contrast-more:border-secondary-700;
+      @apply border-text-700 border-opacity-[--inputs-border-opacity] bg-transparent;
     }
 
     &--filled {
-      @apply bg-secondary-50;
+      @apply bg-secondary-500 text-text-500;
     }
 
     &--ghost {
