--- a/app/design/frontend/Satoshi/Hyva/web/satoshi/theme/components/_resizable.scss
+++ b/app/design/frontend/Satoshi/Hyva/web/satoshi/theme/components/_resizable.scss
@@ -69,7 +69,7 @@
       /* @apply bg-red-500; */
 
       transition-property: transform, border-radius;
-      @apply absolute bg-fg motion-reduce:transition-none;
+      @apply absolute bg-bg-500 motion-reduce:transition-none;
       width: var(--corner-size);
       height: var(--corner-size);
 
@@ -126,7 +126,7 @@
     }
 
     &__side {
-      @apply absolute bg-fg;
+      @apply absolute bg-bg-500;
 
       /* @apply bg-blue-500; */
 
@@ -181,7 +181,7 @@
     }
 
     &__bg {
-      @apply absolute z-10 bg-fg;
+      @apply absolute z-10 bg-bg-500;
 
       /* @apply bg-green-500; */
 
@@ -192,19 +192,16 @@
     &__content {
       @apply absolute top-0 z-20 -mx-[1px] rounded-md transition-opacity delay-450 duration-300 motion-reduce:transition-none;
 
-      .resizable--visible & {
-        @apply contrast-more:border contrast-more:border-secondary-700;
-      }
-
       .resizable--right & {
-        @apply right-0;
+        right: 1px;
       }
 
       &:not(.resizable--right &) {
-        @apply left-0;
+        left: 1px;
       }
 
       &--trigger {
+        @apply flex h-full w-full items-center justify-center;
         .resizable--visible & {
           @apply pointer-events-none opacity-0 delay-0;
         }
