--- a/app/design/frontend/Satoshi/Hyva/web/satoshi/theme/components/_slider.scss
+++ b/app/design/frontend/Satoshi/Hyva/web/satoshi/theme/components/_slider.scss
@@ -23,7 +23,7 @@
   }
 
   &__header {
-    @apply mx-auto mb-7 flex items-center justify-between;
+    @apply mx-auto mb-3 flex items-center justify-between text-text-500;
   }
 
   &__title {
@@ -31,19 +31,11 @@
   }
 
   &__actions {
-    @apply ml-auto flex gap-3;
-  }
-
-  &__scroll-button {
-    @apply button button--outline-primary icon-button icon-button--size-sm max-md:hover:bg-transparent;
-
-    &--disabled {
-      @apply button--outline-secondary cursor-auto hover:bg-transparent active:bg-transparent;
-    }
+    @apply ml-auto flex gap-3 pt-2;
   }
 
   &__slides {
-    @apply flex h-full w-full snap-x snap-mandatory overflow-x-auto scroll-smooth pb-5;
+    @apply flex h-full w-full snap-x snap-mandatory overflow-x-auto scroll-smooth py-5;
 
     gap: var(--slide-gap);
   }
@@ -154,7 +146,7 @@
         background: linear-gradient(
           90deg,
           transparent 0%,
-          #ffffff
+          var(--color-background-500)
             calc(
               (
                   var(--slide-max-width) - var(--content-wrapper-padding-x) -
@@ -177,7 +169,7 @@
         background: linear-gradient(
           270deg,
           transparent 0%,
-          #ffffff
+          var(--color-background-500)
             calc(
               (
                   var(--slide-max-width) - var(--content-wrapper-padding-x) -
