INTERNAL-53: implement language switch feature

--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/language-selector.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/language-selector.phtml
@@ -1,5 +1,7 @@
 <?php
 
+declare(strict_types=1);
+
 use Hyva\Theme\Model\ViewModelRegistry;
 use Magento\Framework\Escaper;
 use Satoshi\Theme\Block\Template;
@@ -19,23 +21,30 @@ foreach ($languages as $key => $language) {
     $options[] = [
         'value' => $escaper->escapeHtml($key),
         'label' => $escaper->escapeHtml($language['name'] ?? ''),
-        'on_click' => 'window.location.href=`' . $language['url'] . '?___store=' . $escaper->escapeJs($key) . '`',
+        'on_click' => "document.querySelector('[name=language_code]').value = '$key'; document.querySelector('#localization_form').submit();",
         'is_active' => $key === $currentLanguageCode,
     ];
 }
 
-$currentLabel = $escaper->escapeHtml(__($languages[$currentLanguageCode]['name'] ?? ''));
+$currentLabel = __($languages[$currentLanguageCode]['name'] ?? '');
 ?>
 
 <?php if (count($options) > 1): ?>
-    <?=
-    $template
-        ->setData([
-            'id' => 'language-selector',
-            'label' => $currentLabel,
-            'options' => $options,
-            'placement' => 'top',
-        ])
-        ->render('Magento_Theme::html/dropdown.phtml');
-    ?>
+    <form method="post"
+          action="<?= $template->getUrl('satoshi_theme/language/updateDefaultStore') ?>"
+          id="localization_form" accept-charset="UTF-8" class="shopify-localization-form">
+        <?= $template->getBlockHtml('formkey') ?>
+        <input type="hidden" name="language_code" value="<?= $currentLanguageCode ?>">
+
+        <?=
+        $template
+            ->setData([
+                'id' => 'language-selector',
+                'label' => $escaper->escapeHtml($currentLabel),
+                'options' => $options,
+                'placement' => 'top',
+            ])
+            ->render('Magento_Theme::html/components/dropdown.phtml');
+        ?>
+    </form>
 <?php endif; ?>
